# eiger

./: .env.example  .gitignore  Dockerfile  OPERATIONS.md  README.md  docker-compose.yml  pyproject.toml
deploy/: aws-userdata.sh
docs/: STATUS.md  m4-instructor-demo.md  s3-e2e-checklist.md  s4-e2e-checklist.md
docs/e2e/: 2026-07-18-s6-m6-mcp-checklist.md  2026-07-18-s7-m7-multi-agent-checklist.md  2026-07-18-s8-m8-guardrails-checklist.md
docs/labs/: test-runbook.md  trainer-guide.md
docs/plans/: 2026-07-11-halcyon-s1-foundation-m1.md  2026-07-11-halcyon-s2-m2-output-handling.md  (+3 more)
halcyon/: agent.py  artifacts.py  audit.py  canary.py  chroma_kb.py  config.py  crm_fixtures.py  dispute_pipeline.py  guards.py  halo.py  kb.py  kb_fixtures.py  llm.py  m4_answers.py  main.py  mcp_host.py  mcp_vault.py  pg_store.py  progress.py  scan_artifact.py  schema.sql  store.py  tools.py  web.py
halcyon/mcp_servers/: crm.py  (+1 more)
tests/: test_agent.py  test_artifacts.py  test_audit_progress.py  test_canary.py  test_chroma_kb.py  test_config.py  test_dispute_pipeline.py  test_guards.py  test_guards_agent.py  test_guards_guardrail.py  test_guards_m2.py  test_guards_tools.py  test_halo_guarded.py  test_kb.py  test_m4_answers.py  test_mcp_host.py  test_mcp_http.py  test_mcp_servers.py  test_mcp_vault.py  test_profile.py  test_scan_artifact.py  test_store.py  test_store_postgres.py  test_tool_llm.py  test_tools.py  test_validator_m1.py  test_validator_m3.py  test_validator_m4.py  test_validators_m6.py  test_validators_m7.py  test_web.py  test_web_m6.py  test_web_m7.py  test_web_m8.py
(+19 files in other folders)
